--- a/src/timer/Digit.module.css
+++ b/src/timer/Digit.module.css
@@ -1,11 +1,19 @@
 .digit
 {
     border: 1px solid black;
+    border-radius: 2px;
     height: 10px;
-    background-color: red;
+    background-color: #666;
+
+    transition: background-color 150ms ease-in-out;
+}
+
+.digit:not(:last-child)
+{
+    margin-bottom: 1px;
 }
 
 .enabled
 {
-    background-color: blue;
+    background-color: #66e2ce;
 }
